# questions-and-answers

./: .gitignore
anonymous/bowling/: CMakeLists.txt  frame.cpp  frame.h  game.cpp  game.h  main.cpp  player.cpp  player.h  procedural.cpp  procedural.h  roll.cpp  roll.h
anonymous/largest-connected-section/: CMakeLists.txt  main.cpp
chicagodave/DynamicPluginFactory/: DynamicPluginFactory.sln
chicagodave/DynamicPluginFactory-Autofac/: DynamicPluginFactory.sln
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.Contracts/: IArithmeticService.cs  ILogService.cs  IPlugin.cs
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.NonContainerFactory/: Nybbles.Questions.NonContainerFactory.csproj  PluginFactory.cs
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.Plugins1/: AdditionPlugin.cs
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.Plugins2/: MultiplicationPlugin.cs
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.Runner/: Nybbles.Questions.Runner.csproj  Program.cs
chicagodave/DynamicPluginFactory-Autofac/Nybbles.Questions.Services/: ArithmeticService.cs  LogService.cs  Nybbles.Questions.Services.csproj  ServicesModule.cs
chicagodave/DynamicPluginFactory/Nybbles.Questions.Contracts/: PluginAttribute.cs
chicagodave/DynamicPluginFactory/Nybbles.Questions.Plugins1/: AdditionPlugin.cs  Nybbles.Questions.Plugins1.csproj
chicagodave/DynamicPluginFactory/Nybbles.Questions.Plugins2/: MultiplicationPlugin.cs
gunngames/sdl2-timers/: CMakeLists.txt  main.cpp
motorcate/money/: CMakeLists.txt  main.cpp
(+2 files in other folders)
